--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -64,12 +64,13 @@
             </div>
 
             <div class="form-control-group">
-                <label class="label" for="input-re-password">Repeat password:</label>
+                <label class="label m-0" for="input-re-password">Repeat password:</label>
                 <input nbInput [(ngModel)]="model.confirmPassword" #rePass="ngModel" type="password"
                     id="input-re-password" name="rePass" placeholder="Confirm Password" fullWidth
                     [status]="email.dirty ? (email.invalid || password.value != rePass.value  ? 'danger' : 'success') : ''"
                     [required]="getConfigValue('forms.validation.password.required')"
                     [attr.aria-invalid]="rePass.invalid && rePass.touched ? true : null">
+                <span class="help-text caption">Capital (uppercase), A number, Minimum 8 characters.</span>
                 <ng-container *ngIf="rePass.invalid && rePass.touched">
                     <p class="error-message" *ngIf="rePass.errors?.required">
                         Password confirmation is required!
@@ -88,7 +89,7 @@
 
             <button nbButton fullWidth status="success" [disabled]="submitted || !form.valid"
                 [class.btn-pulse]="submitted">
-                Register
+                Next
             </button>
             <p class="copyright text-center">
                 Version: {{version}}
