FIX: dob commented

--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -134,9 +134,9 @@
                 <input nbInput [nbDatepicker]="rangepicker" id="dob" placeholder="Date of Birth" autofocus fullWidth
                     formControlName="dob">
                 <nb-rangepicker #rangepicker></nb-rangepicker>
-                <div *ngIf="submitted && f.dob.errors" class="error-form text-danger fs-15">Date of birth is
+                <!-- <div *ngIf="submitted && f.dob.errors" class="error-form text-danger fs-15">Date of birth is
                     required
-                </div>
+                </div> -->
             </div>
 
             <div class="form-control-group m-0">
