--- a/src/app/pages/patients/vitals/vitals.component.html
+++ b/src/app/pages/patients/vitals/vitals.component.html
@@ -13,7 +13,7 @@
     </nb-card-header>
     <nb-card-body>
         <div class="row">
-            <div class="col-6">
+            <!-- <div class="col-6">
                 <div class="col-12 p-3 w-100 chk-block-content" style="display: block" *ngIf="BPChartShow">
                     <h4>{{'kBloodPressure' | translate}}</h4>
                     <canvas baseChart width="300" height="120" [datasets]="BPChartDatasets1" [labels]="BPChartLabels"
@@ -29,6 +29,20 @@
                     <h4>{{'KPulseOximeterType' | translate}}</h4>
                     <canvas baseChart width="300" height="120" [datasets]="spo2ChartData" [labels]="spo2ChartLabels"
                         [options]="spo2ChartOptions" [chartType]="spo2ChartType"></canvas>
+                </div>
+            </div> -->
+            <div class="col-md-6">
+                <div class="col-12 p-3 mb-4">
+                    <h4>{{'kTotal' | translate}}</h4>
+                    <canvas baseChart width="400" height="400" chartType="polarArea" [data]="chartData"
+                        [labels]="chartLabels" [legend]="chartLegend"></canvas>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="col-12 p-3 mb-4">
+                    <h4>{{'kTotal' | translate}}</h4>
+                    <canvas baseChart width="400" height="400" chartType="polarArea" [data]="chartData"
+                        [labels]="chartLabels" [legend]="chartLegend"></canvas>
                 </div>
             </div>
             <div class="col-md-6">
