--- a/src/app/pages/patients/vitals/vitals.component.html
+++ b/src/app/pages/patients/vitals/vitals.component.html
@@ -1,4 +1,4 @@
-<nb-card size="large" style="overflow: auto" class="mt-3">
+<nb-card size="large" style="overflow: auto" class="mt-3 mb-0">
     <nb-card-header>
         <div class="row">
             {{'kTimeRange' | translate}}
