--- a/src/app/pages/patients/vitals/vitals.component.html
+++ b/src/app/pages/patients/vitals/vitals.component.html
@@ -1,9 +1,9 @@
 <nb-card size="large" style="overflow: auto" class="mt-3 mb-0">
     <nb-card-header>
         <div class="row">
-            {{'kTimeRange' | translate}}
+            <div class="col-auto my-auto">{{'kTimeRange' | translate}}</div>
             <div class="col-md-3 ps-4">
-                <select class="form-control border-primary" [(ngModel)]="duration" (ngModelChange)="getList($event)">
+                <select class="form-control border-primary justify-content-end" [(ngModel)]="duration" (ngModelChange)="getList($event)">
                     <option *ngFor="let time of timeduration" value="{{time.val}}" selected>
                         {{time.title}}
                     </option>
