--- a/src/app/pages/patients/vitals/chart/chart.component.html
+++ b/src/app/pages/patients/vitals/chart/chart.component.html
@@ -1,4 +1,4 @@
-<p>{{type.name}} </p>
+<p>{{name}} </p>
 <div class="d-block">
     <canvas baseChart width="400" height="400" [datasets]="lineChartData" [labels]="lineChartLabels"
         [colors]="lineChartColors" [legend]="lineChartLegend" [chartType]="lineChartType" [plugins]="lineChartPlugins">
