--- a/src/app/pages/patients/list/list.component.html
+++ b/src/app/pages/patients/list/list.component.html
@@ -4,8 +4,8 @@
             <div class="row m-auto">
                 <div class="col-auto mx-auto mb-3">
                     <nb-button-group status="primary" size="tiny">
-                        <button nbButtonToggle nbButton pressed (click)= "getData(0)" >All</button>
-                        <button nbButtonToggle nbButton (click)="getData(1)">Monitored</button>
+                        <button nbButtonToggle nbButton pressed (click)= "getData(0)" >{{'kAll' | translate}}</button>
+                        <button nbButtonToggle nbButton (click)="getData(1)">{{'kMonitored' | translate}}</button>
                     </nb-button-group>
                 </div>
                 <div class="col-auto mt-1 mx-auto mb-3 position-relative">
@@ -36,7 +36,7 @@
             <nb-icon nbTooltip="Edit" nbTooltipStatus="primary" icon="edit-outline" (click)="addPatient(user?.patientID);$event.stopPropagation();"></nb-icon>
         </nb-list-item>
         <nb-list-item *ngIf="!users?.length">
-            <p>No patients found. <a (click)="addPatient()">Create New Patient</a></p>
+            <p>{{'kNoPatientFound' | translate}} <a (click)="addPatient()">{{'kCreateNewPatient' | translate}}</a></p>
         </nb-list-item>
     </nb-list>
 </nb-card>
