--- a/src/app/pages/patients/profile/profile.component.html
+++ b/src/app/pages/patients/profile/profile.component.html
@@ -18,8 +18,8 @@
                     <span><nb-icon></nb-icon> 
                     <span class="ps-4">{{patient?.city}}</span>,
                     <span class="ps-1">{{patient?.state}}</span>,
-                    <span class="ps-1">{{patient?.country}}</span>,
-                    <span class="ps-1">{{patient?.zipcode}}</span>.
+                    <span class="ps-1">{{patient?.zipcode}}</span>,
+                    <span class="ps-1">{{patient?.country}}</span>.
                     </span>
               </p> 
             <p><nb-icon icon="person" nbTooltip="Morbidity" nbTooltipPlacement="left"></nb-icon><span class="ps-4" *ngFor="let morbidity of morbidityValue" >{{morbidity}}</span></p> 
