--- a/src/app/pages/patients/vitals/vitals.component.html
+++ b/src/app/pages/patients/vitals/vitals.component.html
@@ -1,4 +1,4 @@
-<nb-card size="large" style="overflow: auto" class="mt-3 mb-0">
+<nb-card size="large" style="overflow: auto" class="mb-0">
     <nb-card-header>
         <div class="row">
             <div class="col-auto my-auto">{{'kTimeRange' | translate}}</div>
@@ -32,9 +32,7 @@
                 </div>
             </div> -->
             <ng-container *ngIf="vitals?.length">
-                <div class="col-md-4" *ngFor="let item of vitals">
-                    <app-vital-chart [type]="item?.vitalType" [name]="item?.displayName" [chartData]="chartInfo"></app-vital-chart>
-                </div>
+                <app-vital-chart  *ngFor="let item of vitals" [type]="item?.vitalType" [name]="item?.displayName" [chartData]="chartInfo"></app-vital-chart>
             </ng-container>
             <p *ngIf="!vitals?.length">{{'kNovitalsfound' | translate}}</p>
         </div>
